--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
