--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-headroom": "^3.1.1",
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.1.1"
