--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "react-dom": "^17.0.2",
     "react-easy-emoji": "^1.4.0",
     "react-headroom": "^3.1.1",
+    "react-icons": "^4.2.0",
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "4.4.1",
     "typeface-roboto": "^1.1.13",
-    "web-vitals": "^1.1.1",
-    "react-transition-group": "4.4.1"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
